--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
+    "lucide-react": "^0.563.0",
     "papaparse": "^5.5.3",
     "pocketbase": "^0.26.5",
     "react": "^19.2.3",
