--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "recharts": "^3.7.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^22.14.0",
     "@types/papaparse": "^5.5.2",
     "@vitejs/plugin-react": "^5.0.0",
