--- a/package.json
+++ b/package.json
@@ -1,31 +1,27 @@
 {
-  "name": "e-rancho---sistema-de-arranchamento",
+  "name": "e-rancho---hgesm",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "push": "git add . && git commit -m \"Update\" && git push"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.34.0",
+    "date-fns": "^4.1.0",
+    "firebase": "^12.8.0",
+    "html5-qrcode": "^2.3.8",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.563.0",
-    "papaparse": "^5.5.3",
-    "pocketbase": "^0.26.5",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "qrcode.react": "^4.2.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "recharts": "^3.7.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^22.14.0",
-    "@types/papaparse": "^5.5.2",
     "@vitejs/plugin-react": "^5.0.0",
-    "autoprefixer": "^10.4.23",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
